<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@color/titleBg"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_link_watcher"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/link_watcher"
            android:textColor="@android:color/white"
            android:textSize="13sp"/>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/tv_param_sheet"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/param_sheet"
            android:textColor="@android:color/black"
            android:textSize="13sp"/>
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/tv_fault_diagnosis"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/fault_diagnosis"
            android:textColor="@android:color/black"
            android:textSize="13sp"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_indicator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="-2dp"
        android:background="@color/colorPrimary"
        android:contentDescription="tab"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_link_data"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#FEFAF9"/>

</LinearLayout>